generator client {
  provider     = "prisma-client"
  output       = "../generated/prisma"
  moduleFormat = "cjs"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../dbml"
}

datasource db {
  provider = "postgresql"
}

model User {
  id         String     @id @default(cuid())
  email      String
  password   String
  firstName  String
  lastName   String
  UserStatus UserStatus @default(ACTIVE)
  UserRole   UserRole   @default(CONSUMER)
  createdAt  DateTime   @default(now())
  updatedAt  DateTime   @updatedAt

  subscriptions UserSubscription[]
  transactions  Transaction[]
  wallet        Wallet?
  topUps        WalletTopUp[]

  @@index([UserStatus])
  @@index([UserRole])
  @@index([createdAt])
}

model PaymentMethod {
  id          String   @id @default(cuid())
  name        String
  description String?
  Status      Status   @default(ACTIVE)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  topUps WalletTopUp[]
}

model SubscriptionPlan {
  id            String        @id @default(cuid())
  name          String
  slug          String        @unique
  description   String?
  price         Decimal       @db.Decimal(10, 2)
  billingPeriod BillingPeriod @default(MONTHLY)
  planDuration  Int           @default(1) // in months
  Status        Status        @default(ACTIVE)
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  subscriptions UserSubscription[]

  @@index([billingPeriod])
  @@index([price])
}

model Wallet {
  id        String   @id @default(cuid())
  userId    String   @unique
  balance   Decimal  @default(0) @db.Decimal(12, 2)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user   User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  topUps WalletTopUp[]
}

model UserSubscription {
  id                    String             @id @default(cuid())
  userId                String
  planId                String
  status                SubscriptionStatus @default(ACTIVE)
  subscriptionStartDate DateTime           @default(now())
  subscriptionEndDate   DateTime
  autoRenew             Boolean            @default(true)
  createdAt             DateTime           @default(now())
  updatedAt             DateTime           @updatedAt

  user         User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan         SubscriptionPlan @relation(fields: [planId], references: [id])
  transactions Transaction[]

  @@unique([userId, planId, status])
  @@index([userId])
  @@index([planId])
  @@index([status])
  @@index([subscriptionEndDate])
}

model WalletTopUp {
  id              String      @id @default(cuid())
  userId          String
  walletId        String
  paymentMethodId String
  amount          Decimal     @db.Decimal(12, 2)
  status          TopUpStatus @default(PENDING)
  transactionRef  String?
  adminNote       String?
  processedAt     DateTime?
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  wallet        Wallet        @relation(fields: [walletId], references: [id], onDelete: Cascade)
  paymentMethod PaymentMethod @relation(fields: [paymentMethodId], references: [id])

  @@index([userId])
  @@index([walletId])
  @@index([paymentMethodId])
  @@index([status])
}

model Transaction {
  id             String        @id @default(cuid())
  userId         String
  subscriptionId String
  amount         Decimal       @db.Decimal(12, 2)
  PaymentStatus  PaymentStatus @default(SUCCESS)
  failureReason  String?
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt

  user         User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  subscription UserSubscription @relation(fields: [subscriptionId], references: [id])

  @@index([userId])
  @@index([subscriptionId])
}

enum UserStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

enum Status {
  ACTIVE
  INACTIVE
  PERMANENTLY_DELETED
}

enum UserRole {
  ADMIN
  CONSUMER
}

enum BillingPeriod {
  MONTHLY
  YEARLY
}

enum SubscriptionStatus {
  UPCOMING
  ACTIVE
  CANCELED
  EXPIRED
}

enum PaymentStatus {
  SUCCESS
  FAILED
}

enum TopUpStatus {
  PENDING
  APPROVED
  REJECTED
}
