//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  UserStatus UserStatus [not null, default: 'ACTIVE']
  UserRole UserRole [not null, default: 'CONSUMER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subscriptions UserSubscription [not null]
  transactions Transaction [not null]
  wallet Wallet
  topUps WalletTopUp [not null]
}

Table PaymentMethod {
  id String [pk]
  name String [not null]
  description String
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  topUps WalletTopUp [not null]
}

Table SubscriptionPlan {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  description String
  price Decimal [not null]
  billingPeriod BillingPeriod [not null, default: 'MONTHLY']
  planDuration Int [not null, default: 1]
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subscriptions UserSubscription [not null]
}

Table Wallet {
  id String [pk]
  userId String [unique, not null]
  balance Decimal [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  topUps WalletTopUp [not null]
}

Table UserSubscription {
  id String [pk]
  userId String [not null]
  planId String [not null]
  status SubscriptionStatus [not null, default: 'ACTIVE']
  subscriptionStartDate DateTime [default: `now()`, not null]
  subscriptionEndDate DateTime [not null]
  autoRenew Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  plan SubscriptionPlan [not null]
  transactions Transaction [not null]

  indexes {
    (userId, planId, status) [unique]
  }
}

Table WalletTopUp {
  id String [pk]
  userId String [not null]
  walletId String [not null]
  paymentMethodId String [not null]
  amount Decimal [not null]
  status TopUpStatus [not null, default: 'PENDING']
  transactionRef String
  adminNote String
  processedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  wallet Wallet [not null]
  paymentMethod PaymentMethod [not null]
}

Table Transaction {
  id String [pk]
  userId String [not null]
  subscriptionId String [not null]
  amount Decimal [not null]
  PaymentStatus PaymentStatus [not null, default: 'SUCCESS']
  failureReason String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  subscription UserSubscription [not null]
}

Enum UserStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

Enum Status {
  ACTIVE
  INACTIVE
  PERMANENTLY_DELETED
}

Enum UserRole {
  ADMIN
  CONSUMER
}

Enum BillingPeriod {
  MONTHLY
  YEARLY
}

Enum SubscriptionStatus {
  UPCOMING
  ACTIVE
  CANCELED
  EXPIRED
}

Enum PaymentStatus {
  SUCCESS
  FAILED
}

Enum TopUpStatus {
  PENDING
  APPROVED
  REJECTED
}

Ref: Wallet.userId - User.id [delete: Cascade]

Ref: UserSubscription.userId > User.id [delete: Cascade]

Ref: UserSubscription.planId > SubscriptionPlan.id

Ref: WalletTopUp.userId > User.id [delete: Cascade]

Ref: WalletTopUp.walletId > Wallet.id [delete: Cascade]

Ref: WalletTopUp.paymentMethodId > PaymentMethod.id

Ref: Transaction.userId > User.id [delete: Cascade]

Ref: Transaction.subscriptionId > UserSubscription.id